# MusicCompositionCore

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  library.properties
examples/: CMakeLists.txt
examples/BuildTest/: BuildTest.ino
examples/BuildTest/CPP/: CMakeLists.txt  main.cpp
examples/CPP/: CMakeLists.txt
examples/CPP/BuildTest/: CMakeLists.txt
examples/CPP/BuildTest/src/: CMakeLists.txt
examples/CPP/CodeTesting/: CMakeLists.txt
examples/CPP/CodeTesting/src/: CMakeLists.txt  main.cpp
examples/CPP/Core/: CMakeLists.txt
examples/CPP/Core/MusicalCore/MusicalNote/: CMakeLists.txt
examples/CPP/Core/UtilityCore/: CMakeLists.txt
examples/CPP/Core/UtilityCore/Accumulator/: CMakeLists.txt
examples/CodeTesting/CPP/: CMakeLists.txt  main.cpp
examples/Communications/: CMakeLists.txt
examples/Communications/Midi/: CMakeLists.txt
examples/Communications/Midi/UartMidi/: CMakeLists.txt
examples/Communications/Midi/UartMidi/InputPort/: CMakeLists.txt
examples/Communications/Uart/: CMakeLists.txt
examples/Communications/Uart/DuplexPort/: CMakeLists.txt
examples/Core/: CMakeLists.txt
examples/Core/MusicalCore/: CMakeLists.txt
examples/Core/MusicalCore/MusicalNote/: CMakeLists.txt
examples/Core/MusicalCore/MusicalScale/: CMakeLists.txt
examples/Core/UtilityCore/: CMakeLists.txt
examples/ExampleTemplate/CPP/: main.cpp
examples/MCC_BuildTest/: MCC_BuildTest.ino
examples/MCC_BuildTest/CPP/: CMakeLists.txt  main.cpp
examples/MCC_CodeTesting/Desktop/: CMakeLists.txt  main.cpp
libs/: CMakeLists.txt
src/: CMakeLists.txt  MCC.cpp  MCC.h  MCC_BuildSettings.h  MCC_GlobalDefinitions.h  MCC_MIDI.h  MCC_Setup.h  MCC_UserSetup.h
src/Communications/: CMakeLists.txt  MCC_Communications.h
src/Communications/Midi/: CMakeLists.txt  MCC_Midi.cpp  MCC_Midi.h  MidiPort.cpp  MidiPort.h
src/Communications/Midi/Port/: CMakeLists.txt  MidiPort.cpp  MidiPort.h
src/Communications/Midi/RtMidi/: CMakeLists.txt  MCC_RtMidi.h
src/Communications/Midi/SystemPorts/: CMakeLists.txt  Midi_SystemPorts.cpp  Midi_SystemPorts.h
src/Communications/Midi/UartMidi/: CMakeLists.txt  UartMidi.cpp  UartMidi.h
src/Communications/Uart/: CMakeLists.txt  Uart.cpp  Uart.h  UartPort.cpp  UartPort.h
src/Communications/Uart/DuplexPort/: CMakeLists.txt  UART_DuplexPort.cpp  UART_DuplexPort.h
src/Communications/Uart/InputPort/: CMakeLists.txt  UART_InputPort.cpp  UART_InputPort.h
src/Communications/Uart/OutputPort/: CMakeLists.txt  UART_OutputPort.cpp  UART_OutputPort.h
src/Communications/Uart/Port/: CMakeLists.txt  UartPort.cpp  UartPort.h
src/Communications/Uart/SystemPorts/: CMakeLists.txt  Uart_SystemPorts.cpp  Uart_SystemPorts.h
src/Core/: CMakeLists.txt  MCC_Core.cpp  MCC_Core.h
src/Core/MidiCore/: CMakeLists.txt  MidiCore.h  MidiDefinitions.h
src/Core/MidiCore/MidiMessage/: MidiMessage.cpp  MidiMessage.h
src/Core/MidiCore/MidiNote/: MidiNote.cpp  MidiNote.h
src/Core/MusicalCore/: CMakeLists.txt  MusicalCore.h
src/Core/MusicalCore/MusicalInterval/: Interval_Class.h  MusicalInterval.cpp  MusicalInterval.h  MusicalInterval_Definitions.h
src/Core/MusicalCore/MusicalNote/: CMakeLists.txt  MusicalNote.cpp  MusicalNote.h  Note_Class.h
src/Core/MusicalCore/MusicalScale/: MusicalScale.cpp  Scale_Class.h
src/Core/UtilityCore/: CMakeLists.txt  UtilityCore.h
src/Core/UtilityCore/Accumulator/: CMakeLists.txt  MCC_Accumulator.h
src/MidiCore/: CMakeLists.txt  MidiCore.h  MidiProtocol.h
src/MidiCore/MidiMessage/: CMakeLists.txt  MidiMessage.cpp  MidiMessage.h
src/MidiCore/MidiNote/: MidiNote.cpp  MidiNote.h
src/MidiMessage/: MidiMessage.cpp  MidiMessage.h
src/MidiNote/: CMakeLists.txt  MidiNote.cpp  MidiNote.h
src/MidiProtocol/: CMakeLists.txt  MCC_MidiProtocol.h
src/MusicalCore/: CMakeLists.txt  MusicalCore.h
src/MusicalCore/MusicalInterval/: CMakeLists.txt  Interval_Class.h  MusicalInterval.h  MusicalInterval_Definitions.h
src/MusicalCore/MusicalInterval/Flash/: CMakeLists.txt  IntervalFlash.cpp  IntervalFlash.h
src/MusicalCore/MusicalNote/: MusicalNote.cpp  MusicalNote.h  Note_Class.h
src/MusicalCore/MusicalNote/Flash/: NoteFlash.cpp  NoteFlash.h  NoteFlash_Definitions.h
src/MusicalCore/MusicalNote/Pitch/: Accidental.cpp  Letter.cpp  NotePitch.cpp  NotePitch_Class.h  NotePitch_Definitions.h
src/MusicalCore/MusicalNote/Sorting/: MusicalNote_Sorting.h
src/MusicalCore/MusicalNote/TextFormat/: TextFormat.cpp  TextFormat_Class.h
src/MusicalCore/MusicalScale/: CMakeLists.txt  MusicalScale.cpp  MusicalScale.h  MusicalScale_Definitions.h  Scale_Class.h
src/MusicalCore/MusicalScale/ScaleFlash/: CMakeLists.txt  ScaleFlash.h  ScaleFlash_Definitions.h
src/MusicalCore/MusicalScale/ScaleProperties/: CMakeLists.txt  ScaleProperties.cpp  ScaleProperties.h  ScaleProperties_Class.h  ScaleProperties_Definitions.h
src/MusicalInterval/: Interval_Class.h  MusicalInterval.cpp  MusicalInterval.h  MusicalInterval_Definitions.h
src/MusicalInterval/Flash/: IntervalFlash.cpp  IntervalFlash.h
src/MusicalNote/: MusicalNote.cpp  MusicalNote.h  Note_Class.h
src/MusicalNote/Flash/: CMakeLists.txt  NoteFlash.cpp  NoteFlash.h  NoteFlash_Definitions.h
src/MusicalNote/Pitch/: Accidental.cpp  Letter.cpp  NotePitch.cpp  NotePitch_Class.h  NotePitch_Definitions.h
src/MusicalNote/Sorting/: MusicalNote_Sorting.h
src/MusicalNote/Sorting/Accidental/: AccidentalSorting.h  CMakeLists.txt
src/MusicalNote/Sorting/Letter/: CMakeLists.txt  LetterSorting.h
src/MusicalNote/Sorting/Note/: NoteSorting.h
src/MusicalNote/Sorting/Pitch/: PitchSorting.h
src/MusicalNote/TextFormat/: CMakeLists.txt  TextFormat.cpp  TextFormat_Class.h
src/MusicalScale/: MusicalScale.cpp  MusicalScale.h  MusicalScale_Definitions.h  Scale_Class.h
src/MusicalScale/ScaleFlash/: ScaleFlash.h  ScaleFlash_Definitions.h
src/MusicalScale/ScaleFlash/ScaleDefinitions/: Egyptian.Scale  EightToneSpanish.Scale  Pelog.Scale  SuperLocrian.Scale
src/MusicalScale/ScaleProperties/: ScaleProperties.cpp  ScaleProperties_Class.h  ScaleProperties_Definitions.h
(+227 files in other folders)
