######################################################################################################
# Append Midi Port Examples

	if(${MCC_COMPILE_MIDI_PORT})
		add_subdirectory(Midi)
	endif()
#
#######################################################################################################
# Append Uart Port Examples

	if(${MCC_COMPILE_UART_PORT})
		add_subdirectory(Uart)
	endif()
#
######################################################################################################