######################################################################################################
# Append Uart Midi Port Examples

	if(${MCC_COMPILE_UART_MIDI})
		add_subdirectory(UartMidi)
	endif()
#
######################################################################################################