######################################################################################################
# Append Musical Note Examples

	if(${MCC_COMPILE_MUSICAL_NOTE})
		add_subdirectory(MusicalNote)
	endif()
#
######################################################################################################
# Append Musical Scale Examples

	if(${MCC_COMPILE_MUSICAL_SCALE})
		add_subdirectory(MusicalScale)
	endif()
#
######################################################################################################
